--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Your Company Name</h1>
+        <h1>Sai Educations</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -19,10 +19,10 @@
     </header>
     <main>
         <h2>Welcome to Our Company</h2>
-        <p>This is the main content of your company page.</p>
+        <p>This is the main content of Sai Educations page.</p>
     </main>
     <footer>
-        <p>&copy; 2023 Your Company Name. All rights reserved.</p>
+        <p>&copy; 2023 Sai Educations. All rights reserved.</p>
     </footer>
 </body>
 </html>
